--- a/index.html
+++ b/index.html
@@ -5,6 +5,40 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inter Rapidísimo Play</title>
+
+    <!-- HTML Meta Tags -->
+
+    <meta
+      name="description"
+      content="Streaming de las campañas mas emotivas de la empresa de envios Inter Rapidísimo."
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://interrapidisimoplay.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Inter Rapidísimo Play" />
+    <meta
+      property="og:description"
+      content="Streaming de las campañas mas emotivas de la empresa de envios Inter Rapidísimo"
+    />
+    <meta
+      property="og:image"
+      content="https://interrapidisimoplay.com/interapidisimoplay-300-200.jpg"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="interrapidisimoplay.com" />
+    <meta property="twitter:url" content="https://interrapidisimoplay.com" />
+    <meta name="twitter:title" content="Inter Rapidísimo Play" />
+    <meta
+      name="twitter:description"
+      content="Streaming de las campañas mas emotivas de la empresa de envios Inter Rapidísimo."
+    />
+    <meta
+      name="twitter:image"
+      content="https://interrapidisimoplay.com/interapidisimoplay-300-200.jpg"
+    />
   </head>
   <body>
     <div id="root"></div>
